<resources>
    <string name="app_name">Flashing Light</string>
    <string name="string_always"> Always ON </string>
    <string name="string_interval">Flashing Interval :</string>
    <string name="string_msec">msec</string>
    <string name="btn_TIPS">TIPS</string>

    <string name="sw_AUTO">Auto ON</string>

    <string name="screen_Green">Green</string>
    <string name="screen_Gray">Gray</string>
    <string name="screen_Orange">Orange</string>

    <string-array name="list_screen">
        <item>Screen Type</item>
        <item>1:Default</item>
        <item>2:Gray</item>
        <item>3:Orange</item>
    </string-array>

    <string name="screen_lock">Screen is locked\n(Press and hold for 3 seconds to unlock)</string>

</resources>